--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "Part 5"]
 	path = Part 5
 	url = git@github.com:ramirsultanov/edu-robotics-5.git
+[submodule "Part 6"]
+	path = Part 6
+	url = git@github.com:ramirsultanov/edu-robotics-6.git
