--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "Part 7"]
 	path = Part 7
 	url = git@github.com:ramirsultanov/edu-robotics-7.git
+[submodule "Part 9"]
+	path = Part 9
+	url = git@github.com:ramirsultanov/edu-robotics-9.git
