--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "Part 9"]
 	path = Part 9
 	url = git@github.com:ramirsultanov/edu-robotics-9.git
+[submodule "Part 8"]
+	path = Part 8
+	url = git@github.com:ramirsultanov/edu-robotics-8.git
